correction card overflow

--- a/src/Components/Cards/Card/Card.css
+++ b/src/Components/Cards/Card/Card.css
@@ -57,6 +57,9 @@
   padding: 0px;
   align-items: flex-start;
   padding-left: 1rem;
+  overflow-x: scroll;
+  max-width: 80%;
+  
 }
 .masMenos {
   display: flex;
